--- a/about.qmd
+++ b/about.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Berit E. Batterton"
-image: profile.jpg
+#image: profile.jpg
 about:
   template: broadside
   ##image-width: 
@@ -32,8 +32,8 @@ Finley Malloc is the Chief Data Scientist at Wengo Analytics. When not innovatin
 
 Born in Baltimore, Maryland, I am a
 
-I'm a [behavioural ecologist](cv.html#education) with an interest in how humans influence behaviour of animals and how citizen science projects can be used to do great science and engage the public.
+<!-- I'm a [behavioural ecologist](cv.html#education) with an interest in how humans influence behaviour of animals and how citizen science projects can be used to do great science and engage the public. -->
 
-I enjoy [teaching](cv.html#teaching) and [outreach](cv.html#community-presentations-and-outreach) and try to spread the love of R and make science more accessible.
+<!-- I enjoy [teaching](cv.html#teaching) and [outreach](cv.html#community-presentations-and-outreach) and try to spread the love of R and make science more accessible. -->
 
 Outside of work, I love travelling, be it camping locally (with my kitties!) or flying to visit more distant destinations. But I also enjoy stay-at-home activities such as reading, gardening and spinning wool into yarn.
