--- a/about.qmd
+++ b/about.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Berit E. Batterton"
-#image: profile.jpg
+image: profile.jpg
 about:
   template: broadside
   ##image-width: 
@@ -16,13 +16,13 @@ about:
 
 Port Aransas, Texas 78373
 
-**Phone:** 443-690-0287\
-**Email:** [b.batterton\@utexas.edu](mailto:b.batterton@utexas.edu)\
-**Twitter:** [\@botanyberit](https://x.com/botanyberit)\
-**Bluesky:** [\@botanyberit](https://bsky.app/profile/botanyberit.bsky.social)
+<!-- **Phone:** 443-690-0287\ -->
+<!-- **Email:** [b.batterton\@utexas.edu](mailto:b.batterton@utexas.edu)\ -->
+<!-- **Twitter:** [\@botanyberit](https://x.com/botanyberit)\ -->
+<!-- **Bluesky:** [\@botanyberit](https://bsky.app/profile/botanyberit.bsky.social) -->
 
-**ResearchGate:** <https://www.researchgate.net/profile/Berit-Batterton>\
-**ORCID:** <https://orcid.org/0000-0002-3606-6517>
+<!-- **ResearchGate:** <https://www.researchgate.net/profile/Berit-Batterton>\ -->
+<!-- **ORCID:** <https://orcid.org/0000-0002-3606-6517> -->
 
 ------------------------------------------------------------------------
 
